--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,10 @@ body {
   padding-inline: 1.6rem;
 }
 
+.mx-auto {
+  margin: 0 auto;
+}
+
 .mx16 {
   margin-inline: 1.6rem;
 }
@@ -190,8 +194,611 @@ body {
   margin-top: 1.4rem;
 }
 
+.mt20 {
+  margin-top: 2rem;
+}
+
 .mt24 {
   margin-top: 2.4rem;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 6.5rem;
+}
+.header .logo {
+  background: url(../images/logo.svg) no-repeat center;
+  width: 17.2rem;
+  height: 3.7rem;
+}
+.header .logo a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.footer-visiual {
+  display: grid;
+  gap: 2.8rem;
+}
+.footer-visiual__top {
+  text-align: center;
+  color: #222222;
+  font-size: 2.5725rem;
+  line-height: 3.43rem;
+  letter-spacing: 0.0257rem;
+}
+.footer-visiual__top .logo {
+  background: url(../images/logo-footer.svg) no-repeat center;
+  display: inline-block;
+  width: 17.7rem;
+  height: 4.5rem;
+}
+.footer-visiual__top__text1 {
+  font-weight: 200;
+}
+.footer-visiual__top__text2 {
+  font-weight: 300;
+}
+.footer-visiual__top__text3 {
+  font-weight: 500;
+}
+.footer-visiual__top__text4 {
+  font-weight: 700;
+}
+.footer-visiual__bot {
+  display: grid;
+  gap: 1.6rem;
+}
+
+.footer {
+  margin-top: 9rem;
+  background-color: #222222;
+}
+.footer .footer-top {
+  display: flex;
+  justify-content: space-between;
+  color: #f8f8f8;
+  padding: 2.5rem 1rem 2.5rem 1.7rem;
+  font-size: 1.6rem;
+  line-height: 3.25rem;
+}
+.footer .footer-top a {
+  display: inline-block;
+  height: 100%;
+}
+.footer .footer-bot {
+  color: #f0f0f0;
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 2rem;
+  border-top: 1px solid #dcdcdc;
+  padding: 3rem 1.7rem;
+}
+
+.align {
+  display: flex;
+}
+.align.right {
+  justify-content: flex-end;
+}
+.align.center {
+  justify-content: center;
+}
+.align.both {
+  justify-content: space-between;
+}
+.align.triple {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+}
+.align.triple > :nth-child(1) {
+  justify-self: start;
+}
+.align.triple > :nth-child(2) {
+  justify-self: center;
+}
+.align.triple > :nth-child(3) {
+  justify-self: end;
+}
+.align.vt {
+  align-items: flex-start;
+}
+.align.vm {
+  align-items: center;
+}
+.align.vb {
+  align-items: flex-end;
+}
+
+.text-left {
+  text-align: left;
+}
+.text-center {
+  text-align: center;
+}
+.text-right {
+  text-align: right;
+}
+
+.btn-link, .btn-next, .btn-prev, .btn-download, .btn-heart-black, .btn-heart-gray, .btn-microphone, .btn-search, .btn-menu, .btn.icon-plus::before {
+  display: inline-block;
+}
+
+.btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.8rem;
+}
+.btn.icon-plus {
+  gap: 0.8rem;
+}
+.btn.icon-plus::before {
+  background: url(../images/icon_plus.svg) no-repeat center;
+  content: "";
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.btn-small {
+  height: 3.8rem;
+  font-size: 1.6rem;
+}
+
+.btn-large {
+  height: 5.6rem;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.btn-bk-primary {
+  color: white;
+  background: linear-gradient(114deg, #0038F5 0%, #9F03FF 100%);
+}
+
+.btn-outline-secondary {
+  border: 1px solid #0038F5;
+  color: #222222;
+}
+
+.btn-outline-gray {
+  border: 1px solid #555555;
+  color: #555555;
+}
+
+.btn-menu {
+  background: url(../images/btn_menu.svg) no-repeat center;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+.header .btn-menu {
+  width: 5.6rem;
+  height: 6.5rem;
+}
+
+.btn-microphone, .btn-search {
+  width: 1.6rem;
+  height: 1.6rem;
+}
+
+.btn-search {
+  background: url(../images/icon_search.svg) no-repeat center;
+}
+.search-type1 .btn-search {
+  width: 3.6rem;
+  height: 4rem;
+}
+
+.btn-microphone {
+  background: url(../images/icon_microphone.svg) no-repeat center;
+}
+.search-type1 .btn-microphone {
+  width: 3.2rem;
+  height: 4rem;
+}
+
+.btn-heart-gray {
+  background: url(../images/icon_heart.svg) no-repeat center;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.btn-heart-black {
+  background: url(../images/icon_heart-black.svg) no-repeat center #fcfcfc;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.btn-download {
+  background: url(../images/icon_download.svg) no-repeat center #fcfcfc;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.btn-prev {
+  background: url(../images/btn_prev.svg) no-repeat center;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.btn-next {
+  background: url(../images/btn_next.svg) no-repeat center;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.btn-link {
+  background: url(../images/icon_link.svg) no-repeat center;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.btn-follow {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0rem 3rem;
+  color: #333333;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 2.4rem;
+  border-radius: 0.8rem;
+  box-shadow: 0px 81px 106px 0px rgba(0, 0, 0, 0.07), 0px 10.142px 13.273px 0px rgba(0, 0, 0, 0.03);
+  background-color: #fcfcfc;
+}
+
+.text-type1 {
+  color: #555555;
+  font-family: Epilogue;
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.8rem; /* 155.556% */
+  letter-spacing: 0.075rem;
+}
+
+.text-type3 {
+  color: #222222;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 3.2rem; /* 133.333% */
+  letter-spacing: 0.024rem;
+}
+
+.text-type4 {
+  color: #222222;
+  font-size: 1.6rem;
+  line-height: 2.2rem; /* 137.5% */
+}
+
+.text-type5 {
+  color: #222222;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 3.2rem;
+  letter-spacing: 0.024rem;
+}
+
+.text-type6 {
+  color: #888888;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 2.4rem;
+}
+
+.h2-1 {
+  color: #222222;
+  font-size: 3.2rem;
+  font-weight: 700;
+  line-height: 3.6rem; /* 112.5% */
+  letter-spacing: 0.1rem;
+}
+
+.h2-2 {
+  color: #222222;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 3.2rem;
+  letter-spacing: 0.024rem;
+}
+.h2-2.icon-fire::before {
+  background: url(../images/icon_fire.svg) no-repeat center;
+  content: "";
+  display: inline-block;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+input {
+  height: 100%;
+  border: none;
+  background-color: transparent;
+}
+
+.search-type1 {
+  display: flex;
+  width: 100%;
+  height: 4rem;
+  border-radius: 0.8rem;
+  background-color: #f0f0f0;
+}
+.search-type1 input {
+  width: calc(100% - 3.6rem - 3.2rem);
+}
+.search-type1::placeholder {
+  color: #888888;
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 2rem;
+}
+
+.profile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.profile .align {
+  gap: 0.8rem;
+}
+.profile__img {
+  position: relative;
+  width: 4.8rem;
+  height: 4.8rem;
+}
+.profile__img img {
+  width: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.profile__name {
+  color: #333333;
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.8rem;
+  letter-spacing: 0.075rem;
+}
+.profile__role {
+  color: #555555;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 2rem; /* 142.857% */
+  letter-spacing: 0.075rem;
+}
+
+.profile-active {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1.2rem;
+  height: 1.2rem;
+  border: 2px solid white;
+  border-radius: 50%;
+  background-color: #009846;
+}
+
+.list-type1 {
+  padding: 1rem;
+  box-shadow: 0px 10px 24px 0px rgba(0, 0, 0, 0.08);
+  background-color: white;
+  border-radius: 3.2rem;
+}
+.list-type1__thumb img {
+  width: 100%;
+}
+.list-type1 .profile {
+  padding-bottom: 0.5rem;
+  padding-right: 1rem;
+  margin-top: 1rem;
+}
+.list-type1 .text-type3 {
+  margin-top: 1rem;
+}
+
+.list-type2__thumb img {
+  width: 100%;
+}
+.list-type2__content {
+  padding: 0.6rem 1rem 0rem;
+}
+.list-type2__title {
+  color: #222222;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+}
+.list-type2__desc {
+  color: #555555;
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 2rem;
+}
+.list-type2__desc b {
+  color: #333333;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2rem;
+}
+
+.list-type3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.3rem;
+}
+.list-type3 img {
+  width: 100%;
+}
+
+.list-type4 {
+  border-radius: 2.4rem;
+  box-shadow: 0px 81px 106px 0px rgba(0, 0, 0, 0.07), 0px 10.142px 13.273px 0px rgba(0, 0, 0, 0.03);
+  overflow: hidden;
+}
+.list-type4__background {
+  background: url(../images/img_background1.png) no-repeat center;
+  background-size: cover;
+  width: 100%;
+  height: 13.5rem;
+}
+.list-type4__content {
+  position: relative;
+  padding: 0 2rem 1.5rem;
+}
+.list-type4__profile-img {
+  position: relative;
+  width: 9.2rem;
+  height: 9.2rem;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -35%);
+  border: 4px solid white;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.list-type4__profile-img img {
+  width: 100%;
+}
+.list-type4__user-name {
+  padding-top: 6rem;
+  color: #222222;
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 3.2rem;
+  letter-spacing: 0.024rem;
+}
+.list-type4__desc {
+  color: #333333;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  margin-top: 0.8rem;
+}
+.list-type4__follow-box {
+  display: flex;
+  justify-content: space-between;
+}
+.list-type4__follow-text {
+  color: #555555;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 2.4rem;
+  letter-spacing: 0.016rem;
+}
+.list-type4__follow-count {
+  color: #222222;
+  font-size: 3.2rem;
+  line-height: 3.6rem;
+  letter-spacing: 0.032rem;
+}
+
+.tag {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 2.8rem;
+  padding: 0rem 1rem;
+  color: #888888;
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 2rem;
+  border: 1px solid #dcdcdc;
+  border-radius: 2.7rem;
+}
+
+.link-type1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5.8rem;
+  padding: 0 1.5rem;
+  border-radius: 1.6rem;
+  box-shadow: 0px 81px 106px 0px rgba(0, 0, 0, 0.07), 0px 10.142px 13.273px 0px rgba(0, 0, 0, 0.03);
+}
+.link-type1__info-content {
+  display: flex;
+  gap: 3rem;
+}
+.link-type1__logo {
+  background: url(../images/icon_etherscan.png) no-repeat center;
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+}
+.link-type1__title {
+  color: #222222;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 2.4rem;
+}
+
+.link-type2 {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 1.7rem 1.7rem 1.2rem;
+  box-sizing: border-box;
+  border-radius: 2.4rem;
+}
+.link-type2__info-content {
+  display: flex;
+  gap: 1rem;
+}
+.link-type2 img {
+  position: relative;
+  width: 5.2rem;
+  height: 5.2rem;
+  border-radius: 50%;
+}
+.link-type2__title {
+  color: #222222;
+  font-size: 1.4rem;
+  line-height: 2rem;
+}
+.link-type2__time {
+  color: #555555;
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 2rem;
+}
+.link-type2__eth-price {
+  color: #222222;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+}
+.link-type2__dollar-price {
+  color: #888888;
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 2rem;
+}
+.link-type2 .btn-link {
+  margin-top: 1rem;
+}
+
+.tab-type1 {
+  display: inline-flex;
+  gap: 0.8rem;
+}
+.tab-type1 button {
+  height: 4.2rem;
+  padding: 0rem 2rem;
+  color: #333333;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  background-color: #f8f8f8;
+  border-radius: 3rem;
+}
+.tab-type1 button.--active {
+  background: linear-gradient(114deg, #0038F5 0%, #9F03FF 100%);
+  color: white;
+}
+
+.guide-title {
+  background-color: yellow;
+  margin: 1rem 0 0.5rem;
+  padding: 0.5rem;
+  font-size: 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
