--- a/scss/abstracts/_variable.scss
+++ b/scss/abstracts/_variable.scss
@@ -7,14 +7,22 @@ $eng: 'Roboto", sans-serif';
 //색깔정의
 $gray22: #222222;
 $gray33: #333333;
-$gray44: #555555;
+$gray55: #555555;
 $gray88: #888888;
 $graydc: #dcdcdc;
 $grayf0: #f0f0f0;
 $grayf8: #f8f8f8;
 $grayfc: #fcfcfc;
-$primary00: #002ef1;
+$primary: #002ef1;
+$primary-2:#0038F5;
 $yellow: #ffb802;
 $orange: #ff9700;
+$green:#009846;
 $red: #fd0025;
+$white:white;
+
+//shadow
+$shadow1: 0px 10px 24px 0px rgba(0, 0, 0, 0.08);
+$shadow2: 0px 81px 106px 0px rgba(0, 0, 0, 0.07), 0px 10.142px 13.273px 0px rgba(0, 0, 0, 0.03);
+
 
