--- a/scss/abstracts/_variable.scss
+++ b/scss/abstracts/_variable.scss
@@ -15,6 +15,7 @@ $grayf8: #f8f8f8;
 $grayfc: #fcfcfc;
 $primary: #002ef1;
 $primary-2:#0038F5;
+$bgPrimary :linear-gradient(114deg, #0038F5 0%, #9F03FF 100%);
 $yellow: #ffb802;
 $orange: #ff9700;
 $green:#009846;
