--- a/scss/abstracts/_variable.scss
+++ b/scss/abstracts/_variable.scss
@@ -5,25 +5,30 @@ $imgurl: '../images/';
 $eng: 'Roboto", sans-serif';
 
 //색깔정의
-$gray22: #222222;
-$gray33: #333333;
-$gray55: #555555;
-$gray88: #888888;
-$graydc: #dcdcdc;
-$grayf0: #f0f0f0;
-$grayf8: #f8f8f8;
-$grayfc: #fcfcfc;
-$primary: #002ef1;
-$primary-2:#0038F5;
-$bgPrimary :linear-gradient(114deg, #0038F5 0%, #9F03FF 100%);
-$yellow: #ffb802;
-$orange: #ff9700;
-$green:#009846;
-$red: #fd0025;
-$white:white;
+$blue00 : #006EFF;
+$blue30: #308dff;
+$blue31: #314865;
+$blue41: #415770;
+$blue47: #478ff1;
+$blue12: #122d4d;
+$blue24: #246BFD;
+$blue2a: #2a2b3f;
+$bluee5: #e5f1ff;
+$blue06: #06f;
+$blued6: #D6E9FC;
+$blue67:#677294;
+$gray6b:#6b6b6b;
+$grayb9: #b9b9b9;
+$gray89: #8997a9;
+$gray24: #242424;
+$gray2f: #2f2f2f;
+$gray8c: #8c8c8c;
+$gray30 : #303131;
+$grayf1: #f1f2f4;
+$grayf4: #F4F6F9;
+$white: white;
 
 //shadow
-$shadow1: 0px 10px 24px 0px rgba(0, 0, 0, 0.08);
-$shadow2: 0px 81px 106px 0px rgba(0, 0, 0, 0.07), 0px 10.142px 13.273px 0px rgba(0, 0, 0, 0.03);
+$shadow1: 0px 51px 14px 0px rgba(0, 32, 96, 0.00), 0px 32px 13px 0px rgba(0, 32, 96, 0.00), 0px 18px 11px 0px rgba(0, 32, 96, 0.01), 0px 8px 8px 0px rgba(0, 32, 96, 0.02), 0px 2px 4px 0px rgba(0, 32, 96, 0.02), 0px 0px 0px 0px rgba(0, 32, 96, 0.02);
 
 
