--- a/scss/abstracts/_variable.scss
+++ b/scss/abstracts/_variable.scss
@@ -6,6 +6,9 @@ $eng: 'Roboto", sans-serif';
 
 //색깔정의
 $blue00 : #006EFF;
+$blue18 : #185FA0;
+$blue24: rgba(36, 106, 250, 0.1);
+$blueea: #eaf1ff;
 $blue30: #308dff;
 $blue31: #314865;
 $blue41: #415770;
@@ -17,18 +20,26 @@ $bluee5: #e5f1ff;
 $blue06: #06f;
 $blued6: #D6E9FC;
 $blue67:#677294;
+$gray61: #616161;
 $gray6b:#6b6b6b;
 $grayb9: #b9b9b9;
 $gray89: #8997a9;
+$gray95 : #95A2B0;
+$gray98: #989898;
 $gray24: #242424;
 $gray2f: #2f2f2f;
 $gray8c: #8c8c8c;
 $gray30 : #303131;
 $grayf1: #f1f2f4;
 $grayf4: #F4F6F9;
+$gray09:#091130;
 $white: white;
 
 //shadow
 $shadow1: 0px 51px 14px 0px rgba(0, 32, 96, 0.00), 0px 32px 13px 0px rgba(0, 32, 96, 0.00), 0px 18px 11px 0px rgba(0, 32, 96, 0.01), 0px 8px 8px 0px rgba(0, 32, 96, 0.02), 0px 2px 4px 0px rgba(0, 32, 96, 0.02), 0px 0px 0px 0px rgba(0, 32, 96, 0.02);
+$shadow2: 0px 0px 0px 0px #3D3D3D05, 0px 2px 5px 0px #3D3D3D05, 0px 9px 9px 0px #3D3D3D05,0px 20px 12px 0px #3D3D3D03, 0px 35px 14px 0px #3D3D3D00, 0px 55px 15px 0px #3D3D3D00;
+
+
+
 
 
