--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -4,5 +4,9 @@
 @forward "button";
 @forward "rating";
 @forward "form";
-
+@forward "sns";
+@forward "devide";
+@forward "profile";
+@forward "bedge";
+@forward "thumnail";
 
